--- a/Student Management System/students/templates/students/add.html
+++ b/Student Management System/students/templates/students/add.html
@@ -1,5 +1,24 @@
 {% extends 'students/base.html' %}
 
+
+{% block nav_bar %}
+
+
+<ul class="navbar-nav mx-auto">
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'notes' %}">Notes</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="{% url 'index' %}">CRM</a>
+  </li>
+  <li class="nav-item"></li>
+  <li class="nav-item">
+    <a class="nav-link " href="{% url 'contact' %}">Contacts</a>
+  </li>
+</ul>
+{% endblock nav_bar %}
+
+
 {% block body %}
 
 {% if success %}
@@ -8,11 +27,14 @@
 
 {% else %}
 
-
-<div class="container container-success">
-    <div>
-      <form action="{% url 'add' %}" method="post">
-    
+&nbsp;
+&nbsp;
+<div class="container container-success mt-5">
+    <div class="container mt-5">
+        &nbsp;
+        <h1>Add student</h1>
+        <form action="{% url 'add' %}" method="post">
+        
       {% csrf_token %}
       {{ form.as_p}}
       
@@ -21,8 +43,8 @@
       </button> {% endcomment %}
       <button
           type="submit"
-          class="btn btn-primary"
-          onclick="this.form.action='{% url 'add' %}'; this.form.submit();"
+          class="btn btn-primary "
+          onclick="this.form.action='{% url 'index' %}'; this.form.submit();"
       >Submit</button>
       
       <button type="reset" class="btn btn-success me-1" >
