--- a/Student Management System/students/templates/students/base.html
+++ b/Student Management System/students/templates/students/base.html
@@ -4,15 +4,25 @@
 <html lang="en">
   <head>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    
+    <!-- Adding bootstrap offline css -->
+
+    <link rel="stylesheet" href="{% static '/assets/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static '/assets/css/styles.min.css' %}">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
+
+
+    <!-- end-->
+
+    <title>EduHub</title>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    {% comment %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
-    />
-    <script
+    /> {% endcomment %}
+    {% comment %} <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
       integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
       crossorigin="anonymous"
@@ -27,12 +37,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
-    <title>Home</title>
+    
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic&amp;display=swap"
-    />
+    /> {% endcomment %}
     {% comment %} <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css" />
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" /> {% endcomment %}
     {% comment %} <link
@@ -41,7 +51,7 @@
     />
   </head> {% endcomment %}
   <body>
-    <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
+    {% comment %} <nav class="navbar navbar-light navbar-expand bg-light navigation-clean">
         <div class="container">
           <a class="navbar-brand" href="{% url 'index' %}">
             <i class="fa-solid fa-graduation-cap"></i>
@@ -52,6 +62,17 @@
             data-bs-target="#navcol-1"
           ></button>
 
+        </div>
+      </nav> {% endcomment %}
+
+      <nav class="navbar navbar-light navbar-expand-md fixed-top navbar-shrink py-3" id="mainNav">
+        <div class="container">
+          <a class="navbar-brand d-flex align-items-center" href="/"><span>
+            <i class="fa-solid fa-graduation-cap fa-lg"></i>
+            EduHub
+          </span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navcol-1">
+            {% block nav_bar %}{% endblock nav_bar %}
+          </div>
         </div>
       </nav>
     {% block body %}
