--- a/Student Management System/students/templates/students/edit.html
+++ b/Student Management System/students/templates/students/edit.html
@@ -11,7 +11,7 @@
 
 <div class="container container-success">
     <div>
-      <form action="{% url 'add' %}" method="post">
+      <form action="{% url 'edit' %}" method="post">
     
       {% csrf_token %}
       {{ form.as_p}}
@@ -22,8 +22,9 @@
       <button
           type="submit"
           class="btn btn-primary"
-          onclick="this.form.action='{% url 'add' %}'; this.form.submit();"
-      >Submit</button>
+          onclick="this.form.action='{% url 'index' %}'; this.form.submit();"
+      >Submit
+    </button>
       
       <button type="reset" class="btn btn-success me-1" href="{% url 'index' %}" >
           {% comment %} <i class="fa-solid fa-user-pen"></i> {% endcomment %}
